# grpc-demo

./: .gitignore  Cargo.toml  README.md
example/: Cargo.toml
example/src/: server.rs
example/src/protos/example/: diner.proto
src/: server.rs
src/protos/example/: diner.proto
