[package]
name = "example"
version = "0.0.1"
authors = ["kanner"]
publish = false

[lib]
name = "protos"
path = "src/protos/mod.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
futures = "0.1.16"
grpcio = "0.4.3"
protobuf = {version="2.4",features=["with-serde"]}
lazy_static = "1.0"
serde_json= "1.0"

[build-dependencies]
protoc-grpcio="1.0"
protobuf = {version="2.4",features=["with-serde"]}
protobuf-codegen = "2.4"
