[package]
name = "example"
version = "0.0.1"
authors = ["John Doe <john.doe@example.com>"]
publish = false

[lib]
name = "protos"
path = "src/protos/mod.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
futures = "0.1.16"
grpcio = "0.4.3"
protobuf = {version="2.4",features=["with-serde"]}
lazy_static = "1.0"

[build-dependencies]
protoc-grpcio = { path = ".." }
